Fix typo in Jupyter notebook

--- a/Motion Planning.ipynb
+++ b/Motion Planning.ipynb
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![resources/dijkstra_eg.png](dijkstra_eg.png)\n",
+    "![Dijkstra example](resources/dijkstra_eg.png)\n",
     "\n",
     "Credits: [Brilliant.org resource](https://brilliant.org/wiki/dijkstras-short-path-finder/#citation-2)"
    ]
